@@ -85,4 +85,19 @@ public class ToolLocalSimpleTest extends ToolSimpleTest {
         );
     }
 
+    @Test
+    public void testRawString() {
+        // can't set --enable-preview for local, ignore
+    }
+
+    @Test
+    public void testSwitchExpression() {
+        // can't set --enable-preview for local, ignore
+    }
+
+    @Test
+    public void testSwitchExpressionCompletion() {
+        // can't set --enable-preview for local, ignore
+    }
+
 }
